Ajout des projets d'entreprises et suppression de certains éléments inutile du Template

--- a/FileTransfer.html
+++ b/FileTransfer.html
@@ -39,12 +39,36 @@
             </div>
         </div>
     </div>
-    <div class="row" style="margin-top: 10%;">
+    <div class="row about-desc">
+        <div class="col-full">
+            <p style="color: white; margin-top:7%;">
+                Ce projet sert à notre entreprise et à nos clients de pouvoir transmettre des fichiers en respectant le RGPD.
+                Nous avons une application sur laquelle on retrouve la gestion des utilisateurs, la gestion des fichiers, et la
+                gestion des paramètres que nous utilisons pour transmettre les fichiers (durée de rétention des fichiers,
+                gestion des adresses mail de réception du récapitulatif automatique des fichiers non récupérés).
+                Les clients eux, se rendent sur un site internet où, après leur inscription ils retrouveront leurs fichiers,
+                pourront les télécharger, ou même nous en transmettre aussi selon notre choix (paramètre que nous déterminons
+                à la création de leur compte).
+            </p>
+        </div>
+    </div> <!-- end about-desc -->
+    <div class="row" style="margin-top: 7%;">
         <div class="col-six tab-full">
             <h3 class="subhead" style="margin-bottom: 5%; ">Page de connexion au site internet pour nos clients</h3>
-        <p>
             <img src="images/FI_File_Transfer-PAGE_cnx.png">
-        </p>
+        </div>
+        <div class="col-six tab-full">
+            <h3 class="subhead" style="margin-bottom: 5%;">
+                Traitement de paramètre crypté passé dans une URL pour l'inscription de nos clients
+            </h3>
+            <img src="images/FI_File_Transfer-Code_cnx_p1.png">
+            <img src="images/FI_File_Transfer-Code_cnx_p2.png">
+        </div>
+    </div>
+    <div class="row" style="margin-top: 5%;">
+        <div class="col-six tab-full" style="margin-left: 25%;">
+            <h3 class="subhead" style="margin-bottom: 5%; ">Page de récupération des fichiers transmis à nos clients</h3>
+            <img src="images/FI_File_Transfer-PAGE_recupFic.png">
         </div>
     </div>
 </body>
