--- a/call.html
+++ b/call.html
@@ -29,4 +29,130 @@
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
 
-    
+</head>
+
+<body>
+    <div style="display : flex;">
+        <div class="row">
+            <div class="col-twelve">
+                <h1 style="color: white; text-align: center;">Projet d'entreprise : FI_Planning</h1>    
+            </div>
+        </div>
+    </div>
+
+    <div class="row about-desc">
+        <div class="col-full">
+            <p style="color: white; margin-top:7%;">
+                Ce projet est un site web dédié à nos entreprises clientes et qui leur permet de connaitre les statistiques de notre call
+                center sur les appels et les ventes réaliser pour leur entreprise
+            </p>
+        </div>
+    </div> <!-- end about-desc -->
+
+    <div class="row" style="margin-top: 7%;">
+        <div class="row">
+            <div class="col-five" style="margin-left: 2%;">            
+                <h3 class="subhead" style="margin-bottom: 5%; ">
+                    Page de sélection de l'option de statistique et de la spciété cliente après leur connexion
+                </h3>
+            </div>
+            <div class="col-five" style="margin-left: 7%;">
+                <h3 class="subhead" style="margin-bottom: 5%; ">
+                    Option: Activité opérateurs,<br>Page de statistiques d'appel selon la période et l'opérateur
+                </h3>        
+            </div>
+        </div>
+        <div class="col-six tab-full">
+            <img src="images/Call_Stat-Select.png">
+        </div>
+        <div class="col-six tab-full">
+            <img src="images/Call_Stat-Activité_OP.png">
+        </div>
+    </div>
+
+    <div class="row" style="margin-top: 3%;">
+        <div class="row">
+            <div class="col-five" style="margin-left: 2%;">
+                <h3 class="subhead" style="margin-bottom: 5%; ">
+                    Option: statistique appels,<br>Page d'informations relatives aux appels passaient pour nos clients selon le ou les standards
+                    d'appel sélectionnés.
+                </h3>
+            </div>
+            <div class="col-five" style="margin-left: 7%;">
+                <h3 class="subhead" style="margin-bottom: 5%; ">
+                    Option: statistique appels,<br>Graphique de l'historique des appels, triable par jour, heure, mois ou jour de la semaine                
+                </h3>
+            </div>
+        </div>     
+        <div class="col-six tab-full">
+            <img src="images/Call_Stat-stat_appel.png">
+        </div>
+        <div class="col-six tab-full">
+            <img src="images/Call_Stat-graph.png">
+        </div>
+    </div>
+
+    <div class="row" style="margin-top: 3%;">
+        <div class="row">
+            <div class="col-five" style="margin-left: 2%;">
+                <h3 class="subhead" style="margin-bottom: 5%; ">
+                    Option: statistique appels,<br>Carte de chaleur des appels selon les heures et les jours de la semaine, triable
+                    par catégorie d'appels
+                </h3>
+            </div>
+            <div class="col-five" style="margin-left: 7%;">
+                <h3 class="subhead" style="margin-bottom: 5%; ">
+                    Option: statistique campagnes,<br>Tableau de statistique des appels selon les campagnes de
+                    nos clients et la date      
+                </h3>
+            </div>
+        </div>
+        <div class="col-six tab-full">
+            <img src="images/Call_Stat-heatMap.png">
+        </div>
+        <div class="col-six tab-full">
+            <img src="images/Call_Stat-tab_campagnes.png">
+        </div>
+    </div>
+
+    <div class="row" style="margin-top: 5%;">
+        <div class="col-six tab-full" style="margin-left: 25%;">
+            <h3 class="subhead" style="margin-bottom: 5%; ">
+                Option: statistique campagnes,<br>Page de détails, après sélection d'un opérateur, sur les 15 derniers jours
+            </h3>
+            <img src="images/Call_Stat-Tableau_stat_periode.png">
+        </div>
+    </div>
+
+    <div class="row" style="margin-top: 3%;">
+        <div class="row">
+            <div class="col-five" style="margin-left: 2%;">
+                <h3 class="subhead" style="margin-bottom: 5%; ">
+                    Requête SQL créée avec une chaine de caractère après reception des paramètre de la procédure
+                    permettant de remplir un graphique
+                </h3>
+            </div>
+            <div class="col-five" style="margin-left: 7%;">
+                <h3 class="subhead" style="margin-bottom: 5%; ">
+                    Requête SQL paramétré permettant de récupérer les données nécessaires pour les calculs de statistique
+                </h3>
+            </div>
+        </div>
+        <div class="col-six tab-full">
+            <img src="images/Call_Stat-req_stantard.png">
+        </div>
+        <div class="col-six tab-full" style="margin-top: 2%;">
+            <img src="images/Call_Stat-req_jour.png">
+        </div>
+    </div>
+
+    <div class="row" style="margin-top: 5%;">
+        <div class="col-six tab-full" style="margin-left: 25%;">
+            <h3 class="subhead" style="margin-bottom: 5%; ">
+               Procédé de rupture sur le résultat de la requête SQL permettant de remplir la table de détails par jours
+            </h3>
+            <img src="images/Call_Stat-rupture_table_jour.png">
+        </div>
+    </div>
+
+</body>
