--- a/planning.html
+++ b/planning.html
@@ -28,3 +28,32 @@
     ================================================== -->
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
+
+</head>
+
+<body>
+    <div style="display : flex;">
+        <div class="row">
+            <div class="col-twelve">
+                <h1 style="color: white; text-align: center;">Projet d'entreprise : FI_Planning</h1>    
+            </div>
+        </div>
+    </div>
+    <div class="row about-desc">
+        <div class="col-full">
+            <p style="color: white; margin-top:7%;">
+                Projet sur lequelle j'ai ajouté la fonctionalité permetant de calculer et de créer un document qui récapitule les
+                heures manquées (vacances, arrêts, abscences) des employés de l'entreprise pour faciliter le calcul des salaires à la
+                fin du mois.
+            </p>
+        </div>
+    </div> <!-- end about-desc -->
+    <div class="row" style="margin-top: 7%;">
+        <div class="col-six tab-full" style="margin-left: 25%;">
+            <h3 class="subhead" style="margin-bottom: 5%; ">
+                Tableau récapitulatif des absences des employés selon une période, et selon leur rôle dans l'entreprise.
+            </h3>
+            <img src="images/FI_Planning.png">
+        </div>
+    </div>
+</body>
