--- a/tableau.html
+++ b/tableau.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--[if lt IE 9 ]><html class="no-js oldie" lang="en"> <![endif]-->
+<!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html class="no-js" lang="fr">
+<!--<![endif]-->
+
+<head>
+
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
@@ -25,9 +32,8 @@
 </head>
 
 <body>
-    <h1 style="color: white; text-align: center;">Mon CV</h1>
+    <h1 style="color: white; text-align: center;">Tableau de synthèse</h1>
     <div style="display: flex;justify-content: center;">
-        <img src="images/CV_Damien.png" style="width: 50%;"/>
+        <img src="images/tableau_synthese-1.png" style="width: 50%;"/>
     </div>
 </body>
-</html>
