Ajout des projets d'entreprise et résolution des bugs du site web

--- a/CV.html
+++ b/CV.html
@@ -29,5 +29,12 @@
     <div style="display: flex;justify-content: center;">
         <img src="images/CV_Damien.png" style="width: 50%;"/>
     </div>
+    <div class="row clients-outer">
+        <div class="col-full" style="display: flex;justify-content: center;">  
+            <a href="https://www.linkedin.com/in/damien-pizarro/" target="_blank">
+                <p>Mon LinkedIn</p>
+            </a>
+        </div> <!-- end col-full -->
+    </div> <!-- end clients-outer -->
 </body>
 </html>
