--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <div class="row clients-outer" data-aos="fade-up">
             <div class="col-full" style="display: flex;justify-content: center;">  
-                <a href="CV.html" title="" class="clients__slide"><img src="images/icone_CV.png" style="width: 20%;" /></a>     
+                <a href="CV.html" title="" class="clients__slide"><img src="images/icone_CV.png" style="width: 20%;" /></a>
             </div> <!-- end col-full -->
         </div> <!-- end clients-outer -->
 
@@ -230,6 +230,18 @@
                     <a href="lien.html" class="thumb-link clients__slide" data-size="1050x700">
                         <img src="images/lien.png" />
                     </a>
+                    <a href="calculatrice.html" class="thumb-link clients__slide" data-size="1050x700">
+                        <img src="images/calculatrice.png" />
+                    </a>
+                    <a href="blog.html" class="thumb-link clients__slide" data-size="1050x700">
+                        <img src="images/blog.png" />
+                    </a>
+                    <a href="learnit.html" class="thumb-link clients__slide" data-size="1050x700">
+                        <img src="images/lecon.png" />
+                    </a>
+                    <!-- <a href="note_de_frais.html" class="thumb-link clients__slide" data-size="1050x700">
+                        <img src="images/argent.png" />
+                    </a> -->
 
 
 
@@ -247,7 +259,8 @@
                     <div class="testimonials__slide">
 
                         <div class="testimonials__info">
-                            <span class="testimonials__name">Call statistique</span> 
+                            <span class="testimonials__name">Call statistique</span>
+                            <span class="testimonials_pos">Projet d'entreprise</span>
                         </div>
                         
                         <p style="font-size: 100%;">
@@ -259,7 +272,8 @@
                     <div class="testimonials__slide">
 
                         <div class="testimonials__info">
-                            <span class="testimonials__name">File Transfer</span> 
+                            <span class="testimonials__name">File Transfer</span>
+                            <span class="testimonials_pos">Projet d'entreprise</span>
                         </div>
 
                         <p style="font-size: 100%;">  
@@ -276,7 +290,22 @@
                     <div class="testimonials__slide">
 
                         <div class="testimonials__info">
-                            <span class="testimonials__name">Liaison commandes</span> 
+                            <span class="testimonials__name">Planning</span>
+                            <span class="testimonials_pos">Projet d'entreprise</span>
+                        </div>
+
+                        <p style="font-size: 100%;">  
+                            Projet sur lequelle j'ai ajouté la fonctionalité permetant de calculer et de créer un document qui récapitule les
+                            heures manquées (vacances, arrêts, abscences) des employés de l'entreprise pour faciliter le calcul des salaires
+                            à la fin du mois.
+                        </p>
+                    </div>
+
+                    <div class="testimonials__slide">
+
+                        <div class="testimonials__info">
+                            <span class="testimonials__name">Liaison commandes</span>
+                            <span class="testimonials_pos">Projet d'entreprise</span>
                         </div>
 
                         <p style="font-size: 100%;">
@@ -285,7 +314,61 @@
                             fois l'association faite, de rechercher les appels et les commandes restantes qui sont des anomalies
                             (date/heure de l'appel ou de la commande mal renseignée par le call-center)
                         </p>
+                    </div>
 
+                    <div class="testimonials__slide">
+
+                        <div class="testimonials__info">
+                            <span class="testimonials__name">Calculatrice</span>
+                            <span class="testimonials_pos">Projet de formation</span>
+                        </div>
+
+                        <p style="font-size: 100%;">
+                            Projet de début de formation qui consiste à créer une calculatrice fonctionnelle avec une interface soignée
+                        </p>
+                    </div>
+
+                    <div class="testimonials__slide">
+
+                        <div class="testimonials__info">
+                            <span class="testimonials__name">Blog MVC</span>
+                            <span class="testimonials_pos">Projet de formation</span>
+                        </div>
+
+                        <p style="font-size: 100%;">
+                           Projet réalisé pendant ma formation qui est un blog avec un espace d'inscription et de connexion, la possibilité
+                           de commenter un poste ou d'en créer un. Tout le projet à était réaliser en MVC
+                        </p>
+                    </div>
+
+                    <!--
+                    <div class="testimonials__slide">
+
+                        <div class="testimonials__info">
+                            <span class="testimonials__name">Note de frais</span>
+                            <span class="testimonials_pos">Projet de formation</span>
+                        </div>
+
+                        <p style="font-size: 100%;">
+                            Ce projet est un site web de note de frais avec une iscription en tant que demandeur afin de demander à ne pas
+                            être rembourser des frais d'une association sportive pour pouvoir les déduire des impôts. Ce site se compose d'un
+                            formulaire d'inscription et de connexion puis un formulaire de remplissage de note de frais
+                        </p>
+                    </div>
+                    -->
+
+                    <div class="testimonials__slide">
+
+                        <div class="testimonials__info">
+                            <span class="testimonials__name">LearnIt</span>
+                            <span class="testimonials_pos">Projet de formation</span>
+                        </div>
+
+                        <p style="font-size: 100%;">
+                            Application d'apprentissage en ligne efféctué avec la méthode scrum qui permet aux utilisateurs de créer
+                            leur compte ou de se connecter et de suivre une formation. Elle permet aussi de créer un administrateur
+                            qui peut gérer les formations ou les autres utilisateurs
+                        </p>
                     </div>
 
                 </div><!-- end testimonials -->
