--- a/learnit.html
+++ b/learnit.html
@@ -35,50 +35,46 @@
     <div style="display : flex;">
         <div class="row">
             <div class="col-twelve">
-                <h1 style="color: white; text-align: center;">Projet d'entreprise : HS_CC_Lien</h1>    
+                <h1 style="color: white; text-align: center;">Projet d'entreprise : FI_FileTransfer</h1>    
             </div>
         </div>
     </div>
     <div class="row about-desc">
         <div class="col-full">
             <p style="color: white; margin-top:7%;">
-                Ce projet est une application utiliser par notre entreprise afin de lier automatiquement les appels reçus et les commandes
-                passées pendant l'appel en fonction de la date et l'heure de la commande. Elle permet aussi, une fois l'association faite, de
-                rechercher les appels et les commandes restantes qui sont des anomalies (date/heure de l'appel ou de la commande mal
-                renseignée par le call-center)
+                Application d'apprentissage en ligne efféctué avec la méthode scrum qui permet aux utilisateurs de créer
+                leur compte ou de se connecter et de suivre une formation. Elle permet aussi de créer un administrateur
+                qui peut gérer les formations ou les autres utilisateurs
             </p>
         </div>
     </div> <!-- end about-desc -->
-
-    <div class="row" style="margin-top: 7%;">
+    <div class="row" style="margin-top: 3%;">
         <div class="row">
-            <div class="col-five" style="margin-left: 2%;">            
+            <div class="col-five" style="margin-left: 2%;">
                 <h3 class="subhead" style="margin-bottom: 5%; ">
-                    Page de liaison des appels et des commandes en fonction de la date avec la possibilité de renseigner la marge à rajouter
-                    pour la recherche
+                    Classe d'ajout d'une leçon
                 </h3>
             </div>
             <div class="col-five" style="margin-left: 7%;">
                 <h3 class="subhead" style="margin-bottom: 5%; ">
-                   Page de recherche des anomalies restantes après la liaison des appels et des commande, également paramétrable en fonction
-                   de la date
-                </h3>        
+                    Classe d'ajout d'un utilisateur 
+                </h3>
             </div>
         </div>
-        <div class="col-six tab-full" style="margin-top: 5px;">
-            <img src="images/HS_CC_Lien-asso.png">
+        <div class="col-six tab-full" style="margin-top: 4%;">
+            <img src="images/learnit-addlesson.png">
         </div>
         <div class="col-six tab-full">
-            <img src="images/HS_CC_Lien-anno.png">
+            <img src="images/Learnit-adduser.png">
         </div>
     </div>
 
     <div class="row" style="margin-top: 3%;">
         <div class="col-six tab-full" style="margin-left: 25%;">
             <h3 class="subhead" style="margin-bottom: 5%; ">
-                Code de parcours du fichier des appels avec la date de la commande et écriture dans le nouveau fichier de liaison
+               Code du menu de l'administrateur
             </h3>
-            <img src="images/HS_CC_Lien-rupture.png">
+            <img src="images/learnit-admin.png">
         </div>
     </div>
 </body>
