--- a/Note_de_frais.html
+++ b/Note_de_frais.html
@@ -42,13 +42,9 @@
     <div class="row about-desc">
         <div class="col-full">
             <p style="color: white; margin-top:7%;">
-                Ce projet sert à notre entreprise et à nos clients de pouvoir transmettre des fichiers en respectant le RGPD.
-                Nous avons une application sur laquelle on retrouve la gestion des utilisateurs, la gestion des fichiers, et la
-                gestion des paramètres que nous utilisons pour transmettre les fichiers (durée de rétention des fichiers,
-                gestion des adresses mail de réception du récapitulatif automatique des fichiers non récupérés).
-                Les clients eux, se rendent sur un site internet où, après leur inscription ils retrouveront leurs fichiers,
-                pourront les télécharger, ou même nous en transmettre aussi selon notre choix (paramètre que nous déterminons
-                à la création de leur compte).
+                Ce projet est un site web de note de frais avec une iscription en tant que demandeur afin de demander à ne pas
+                être rembourser des frais d'une association sportive pour pouvoir les déduire des impôts. Ce site se compose d'un
+                formulaire d'inscription et de connexion puis un formulaire de remplissage de note de frais
             </p>
         </div>
     </div> <!-- end about-desc -->
