--- a/blog.html
+++ b/blog.html
@@ -35,50 +35,59 @@
     <div style="display : flex;">
         <div class="row">
             <div class="col-twelve">
-                <h1 style="color: white; text-align: center;">Projet d'entreprise : HS_CC_Lien</h1>    
+                <h1 style="color: white; text-align: center;">Projet de formation: Blog MVC</h1>    
             </div>
         </div>
     </div>
     <div class="row about-desc">
         <div class="col-full">
             <p style="color: white; margin-top:7%;">
-                Ce projet est une application utiliser par notre entreprise afin de lier automatiquement les appels reçus et les commandes
-                passées pendant l'appel en fonction de la date et l'heure de la commande. Elle permet aussi, une fois l'association faite, de
-                rechercher les appels et les commandes restantes qui sont des anomalies (date/heure de l'appel ou de la commande mal
-                renseignée par le call-center)
+                Projet réalisé pendant ma formation qui est un blog avec un espace d'inscription et de connexion, la possibilité
+                de commenter un poste ou d'en créer un. Tout le projet à était réaliser en MVC
             </p>
-        </div>
+        </div>  
     </div> <!-- end about-desc -->
 
     <div class="row" style="margin-top: 7%;">
         <div class="row">
             <div class="col-five" style="margin-left: 2%;">            
                 <h3 class="subhead" style="margin-bottom: 5%; ">
-                    Page de liaison des appels et des commandes en fonction de la date avec la possibilité de renseigner la marge à rajouter
-                    pour la recherche
+                    Page de visualisation des commentaires liés à un poste
                 </h3>
             </div>
             <div class="col-five" style="margin-left: 7%;">
                 <h3 class="subhead" style="margin-bottom: 5%; ">
-                   Page de recherche des anomalies restantes après la liaison des appels et des commande, également paramétrable en fonction
-                   de la date
+                    Formulaire de création d'un compte utilisateur sur notre blog
                 </h3>        
             </div>
         </div>
-        <div class="col-six tab-full" style="margin-top: 5px;">
-            <img src="images/HS_CC_Lien-asso.png">
-        </div>
         <div class="col-six tab-full">
-            <img src="images/HS_CC_Lien-anno.png">
+            <img src="images/Blog-commentaires.png">
+        </div>
+        <div class="col-six tab-full" style="margin-top: 3%;">
+            <img src="images/Blog-Formulaire.png">
         </div>
     </div>
 
     <div class="row" style="margin-top: 3%;">
-        <div class="col-six tab-full" style="margin-left: 25%;">
-            <h3 class="subhead" style="margin-bottom: 5%; ">
-                Code de parcours du fichier des appels avec la date de la commande et écriture dans le nouveau fichier de liaison
-            </h3>
-            <img src="images/HS_CC_Lien-rupture.png">
+        <div class="row">
+            <div class="col-five" style="margin-left: 2%;">
+                <h3 class="subhead" style="margin-bottom: 5%; ">
+                    Code d'une vue Twig utilisé sur le blog 
+                </h3>           
+            </div>
+            <div class="col-five" style="margin-left: 7%;">
+                <h3 class="subhead" style="margin-bottom: 5%; ">
+                    Classe de validation de l'inscription d'un utilisateur dans un de nos controleurs
+                </h3>
+            </div>
+        </div>
+        <div class="col-six tab-full" style="margin-top: 5%;">
+            <img src="images/Blog-code-view.png">
+        </div>
+        <div class="col-six tab-full">
+            <img src="images/Blog-code-classe.png">
         </div>
     </div>
+
 </body>
