--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
 
     <!-- contact
-    ================================================== -->
+    ================================================== --
     <section id="contact" class="s-contact">
 
         <div class="overlay"></div>
@@ -429,17 +429,17 @@
                     </fieldset>
                 </form>
 
-                <!-- contact-warning -->
+                <!-- contact-warning -
                 <div class="message-warning">
                     Something went wrong. Please try again.
                 </div> 
             
-                <!-- contact-success -->
+                <!-- contact-success -
                 <div class="message-success">
                     Your message was sent, thank you!<br>
                 </div>
 
-            </div> <!-- end contact-primary -->
+            </div> <!-- end contact-primary 
 
             <div class="contact-secondary">
                 <div class="contact-info">
@@ -488,18 +488,18 @@
                         <li>
                             <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
                         </li>
-                    </ul> <!-- end contact-social -->
+                    </ul> <!-- end contact-social 
 
-                </div> <!-- end contact-info -->
-            </div> <!-- end contact-secondary -->
+                </div> <!-- end contact-info 
+            </div> <!-- end contact-secondary 
 
-        </div> <!-- end contact-content -->
+        </div> <!-- end contact-content 
 
     </section> <!-- end s-contact -->
 
 
     <!-- footer
-    ================================================== -->
+    ================================================== -
     <footer>
 
         <div class="row footer-main">
