Rajout des nouveaux projets réalisé et ajout des veilles technologique

--- a/Note_de_frais.html
+++ b/Note_de_frais.html
@@ -35,7 +35,7 @@
     <div style="display : flex;">
         <div class="row">
             <div class="col-twelve">
-                <h1 style="color: white; text-align: center;">Projet d'entreprise : FI_FileTransfer</h1>    
+                <h1 style="color: white; text-align: center;">Projet de formation : Note de frais</h1>    
             </div>
         </div>
     </div>
@@ -50,22 +50,33 @@
     </div> <!-- end about-desc -->
     <div class="row" style="margin-top: 7%;">
         <div class="col-six tab-full">
-            <h3 class="subhead" style="margin-bottom: 5%; ">Page de connexion au site internet pour nos clients</h3>
-            <img src="images/FI_File_Transfer-PAGE_cnx.png">
+            <h3 class="subhead" style="margin-bottom: 5%; ">
+                Code de verification du mot de passe et de son hachage lors de la connexion.
+            </h3>
+            <img src="images/NoteFrais_code.png">
         </div>
         <div class="col-six tab-full">
             <h3 class="subhead" style="margin-bottom: 5%;">
-                Traitement de paramètre crypté passé dans une URL pour l'inscription de nos clients
+                Formulaire à remplir afin de créer une nouvelle ligne de frais.
             </h3>
-            <img src="images/FI_File_Transfer-Code_cnx_p1.png">
-            <img src="images/FI_File_Transfer-Code_cnx_p2.png">
+            <img src="images/NoteFrais_formulaire.png">
         </div>
     </div>
 
     <div class="row" style="margin-top: 3%;">
-        <div class="col-six tab-full" style="margin-left: 25%;">
-            <h3 class="subhead" style="margin-bottom: 5%; ">Page de récupération des fichiers transmis à nos clients</h3>
-            <img src="images/FI_File_Transfer-PAGE_recupFic.png">
+        <div class="col-six tab-full">
+            <h3 class="subhead" style="margin-bottom: 5%; ">
+                Page de visualisation de la note de frais dans sa totalité, avec toute les lignes
+                de frais et la possibilité de l'imprimer.
+            </h3>
+            <img src="images/NoteFrais_NoteDeFrais.png">
+        </div>
+        <div class="col-six tab-full">
+            <h3 class="subhead" style="margin-bottom: 5%; ">
+                Page de visualisation des lignes de frais saisie par l'utilisateur
+                afin de pouvoir les supprimer.
+            </h3>
+            <img src="images/NoteFrais_lignefrais.png">
         </div>
     </div>
 </body>
