--- a/call.html
+++ b/call.html
@@ -35,7 +35,7 @@
     <div style="display : flex;">
         <div class="row">
             <div class="col-twelve">
-                <h1 style="color: white; text-align: center;">Projet d'entreprise : FI_Planning</h1>    
+                <h1 style="color: white; text-align: center;">Projet d'entreprise : FI_CallStat</h1>    
             </div>
         </div>
     </div>
