--- a/tableau.html
+++ b/tableau.html
@@ -34,6 +34,6 @@
 <body>
     <h1 style="color: white; text-align: center;">Tableau de synthèse</h1>
     <div style="display: flex;justify-content: center;">
-        <img src="images/tableau_synthese_rempli-1.png" style="width: 50%;"/>
+        <img src="images/Tableau_synthese.jpg" style="width: 50%;"/>
     </div>
 </body>
